<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:focusable="true"
    android:focusableInTouchMode="true">


    <LinearLayout
        android:id="@+id/settingsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="5dp">

        <!-- <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1.0"
            android:layout_margin="5dp">
            <TextView
                android:id="@+id/samplingRateText"
                android:layout_width="0dip"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:text="@string/samplingFrequencyTextView"
                android:gravity="center_vertical"/>
            <SeekBar
                android:id="@+id/samplingRateSeekbar"
                android:layout_width="0dip"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:max="8"
                android:progress="8"/>

        </LinearLayout> -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1.0"
            android:layout_margin="5dp">
            <TextView
                android:layout_width="0dip"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:text="@string/DecisionRate"/>
            <EditText
                android:id="@+id/DecisionRateVal"
                android:text="@string/DecisionRateVal"
                android:textSize="14sp"
                android:inputType="numberDecimal"
                android:layout_width="0dip"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    <!--
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1.0"
            android:layout_margin="5dp">
            <TextView
                android:layout_width="0dip"
                android:layout_weight="0.5"
                android:layout_height="match_parent"
                android:text="@string/decisionRate"/>

            <EditText
                android:id="@+id/decisionRate"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:inputType="numberDecimal"
                android:text="@string/smoothingBufferSize"
                android:textSize="14sp" />
        </LinearLayout>
        -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1.0"
            android:layout_margin="5dp">
            <TextView
                android:layout_width="0dip"
                android:layout_weight="0.5"
                android:layout_height="match_parent"
                android:text="@string/sigma"/>
            <EditText
                android:id="@+id/sigmaVal"
                android:text="@string/sigmaVal"
                android:inputType="numberDecimal"
                android:textSize="14sp"
                android:layout_width="0dip"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1.0"
            android:layout_margin="5dp">
            <TextView
                android:layout_width="0dip"
                android:layout_weight="0.5"
                android:layout_height="match_parent"
                android:text="@string/fractionRej"/>
            <EditText
                android:id="@+id/fractionRejVal"
                android:text="@string/fractionRejVal"
                android:inputType="numberDecimal"
                android:textSize="14sp"
                android:layout_width="0dip"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1.0"
            android:layout_margin="5dp">
            <TextView
                android:layout_width="0dip"
                android:layout_weight="0.5"
                android:layout_height="match_parent"
                android:text="@string/ChunkSize"/>
            <EditText
                android:id="@+id/ChunkSizeVal"
                android:text="@string/ChunkSizeVal"
                android:inputType="numberDecimal"
                android:textSize="14sp"
                android:layout_width="0dip"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    <!--
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1.0"
        android:layout_margin="5dp">
        <TextView
            android:id="@+id/quietAdjustmentText"
            android:layout_width="0dip"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:text="@string/quietAdjustment"/>
        <SeekBar
            android:id="@+id/quietAdjustmentSeekbar"
            android:layout_width="0dip"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:max="200"
            android:progress="90"/>
    </LinearLayout>
    -->
        <!--
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1.0"
        android:layout_margin="5dp">
        <TextView
            android:layout_width="0dip"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:text="@string/playAudio"/>
        <Switch
            android:id="@+id/switchPlayAudio"
            android:layout_width="0dip"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:checked="false" />
    </LinearLayout>
    -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1.0"
            android:layout_margin="5dp">
            <TextView
                android:layout_width="0dip"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:text="@string/HybridClassification"/>
            <Switch
                android:id="@+id/switchHybridClassification"
                android:layout_width="0dip"
                android:layout_weight="0.5"
                android:layout_height="wrap_content"
                android:checked="false" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1.0"
            android:layout_margin="5dp">
            <TextView
                android:layout_width="0dip"
                android:layout_weight="0.7"
                android:layout_height="wrap_content"
                android:text="@string/SavingClassificationData"/>
            <Switch
                android:id="@+id/switchSavingClassificationData"
                android:layout_width="0dip"
                android:layout_weight="0.3"
                android:layout_height="wrap_content"
                android:checked="false" />
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1.0"
        android:layout_margin="5dp">
        <TextView
            android:layout_width="0dip"
            android:layout_weight="0.7"
            android:layout_height="wrap_content"
            android:text="@string/storeFeatures"/>
        <Switch
            android:id="@+id/switchStoreFeatures"
            android:layout_weight="0.3"
            android:layout_height="wrap_content"
            android:layout_width="0dip"/>
    </LinearLayout>
        <!--
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1.0"
        android:layout_margin="5dp">
        <TextView
            android:layout_width="0dip"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:text="@string/SavingButtVal"/>
        <Switch
            android:id="@+id/SavingButtVal"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:layout_width="0dip"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1.0"
        android:layout_margin="5dp">
        <TextView
            android:layout_width="0dip"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:text="@string/LoadingButtVal"/>
        <Switch
            android:id="@+id/LoadingButtVal"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:layout_width="0dip"/>
    </LinearLayout>
    -->
</LinearLayout>
<LinearLayout
    android:id="@+id/status"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_below="@+id/settingsLayout"
    android:layout_above="@+id/buttonLayout">
    <TextView
        android:id="@+id/statusView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:background="@android:color/background_light" />
</LinearLayout>

<LinearLayout
    android:id="@+id/buttonLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_above="@+id/bottomtext"
    android:orientation="horizontal"
    android:weightSum="0.99"
    android:layout_margin="5dp">
    <Button
        style="?android:attr/buttonBarButtonStyle"
        android:text="@string/startButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/buttonStart"
        android:onClick="onStartClick"
        android:layout_weight="0.5"/>
    <!-- <Button
        style="?android:attr/buttonBarButtonStyle"
        android:text="@string/readButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/buttonRead"
        android:onClick="onReadClick"
        android:layout_weight="0.33"/> -->
    <Button
        style="?android:attr/buttonBarButtonStyle"
        android:text="@string/stopButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/buttonStop"
        android:onClick="onStopClick"
        android:layout_weight="0.5"/>
</LinearLayout>
<LinearLayout
    android:id="@+id/bottomtext"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:text="@string/copyright"/>


</LinearLayout>
</RelativeLayout>
